Cross-browser fixes -Firefox does not always detect that classes were toggled to trigger animations. The fix is increasing the delay on the setTimeout calls which affect the delay of the class toggling -In Safari, the data port stretches vertically inside its container. The fix is explicitly setting a width and height on the data port image

--- a/style.css
+++ b/style.css
@@ -154,7 +154,8 @@ button:disabled {
 }
 
 .data-port {
-    width: 100%;
+    width: 15rem;
+    height: 15rem;
 }
 
 .data-port__rotate {
